--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
     <div class="container" id="question-container">
         <div class="gif-container">
-            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDdtZ2t5eG02Y2V2c3V4eW9sZ2V2c3V4eW9sZ2V2c3V4eW9sZ2V2cyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/3o7TKL60KM0j4oD0S4/giphy.gif" alt="Christmas Bear">
+            <img src="https://media.tenor.com/g2QCh3Ct2FkAAAAi/merry-christmas-happy-holidays.gif" alt="Christmas Bear">
         </div>
 
         <h1>Will you spend Christmas with me? 🎄</h1>
@@ -199,3 +199,4 @@
     </script>
 </body>
 </html>
+
